--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         ],
         "files": [
             "app/library/constant.php",
-            "app/library/helper.php",
+            "app/library/helper.php"
         ]
     },
     "autoload-dev": {
