--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
     "require": {
         "php": "^7.2",
         "doctrine/dbal": "^2.10",
+        "dompdf/dompdf": "^1.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
+        "phpoffice/phpword": "^0.17.0",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
